welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: ')' expected but '}' found.
}else{
^loneTeen:5: error: ';' expected but 'else' found.
}else{
 ^loneTeen:9: error: Unmatched closing brace '}' ignored here
 }
 ^